glx/testdata/invalid/comprehensive-broken-references/persons/person-john.glx
persons:
  person-john:
    properties:
      name:
        value: "John Smith"
        fields:
          given: "John"
          surname: "Smith"

